# chat_bi_ui

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
tools/chatbi-ai-service/: .env.example  README.md  pyproject.toml
tools/chatbi-ai-service/app/: __init__.py  cli.py  main.py  models.py
tools/chatbi-ai-service/app/analysis/: __init__.py  executor.py  plan_models.py  validator.py
tools/chatbi-ai-service/app/core/: __init__.py  container.py  dispatch.py  env.py  execution.py  settings.py
tools/chatbi-ai-service/app/orchestration/: __init__.py  boundary.py  java_gateway.py  models.py  object_registry.py  router.py  services.py  store.py
tools/chatbi-ai-service/app/scenes/: __init__.py
tools/chatbi-ai-service/evals/: README.md
tools/chatbi-ai-service/evals/chart_ask/: case_001.json  case_002.json  case_003.json  case_004.json  case_005.json  case_006.json  case_007.json
tools/chatbi-ai-service/evals/chart_recommend/: case_001.json  case_002.json  case_003.json  case_004.json  (+3 more)
tools/chatbi-ai-service/tests/: conftest.py  test_analysis_executor.py  test_api.py  test_chart_ask_service.py  test_chart_recommend_service.py  test_cli.py  test_command_plan_service.py  test_composed_cases.py  test_composed_runner.py  test_data_guide_service.py  test_eval_cases.py  test_eval_runner.py  test_openai_compatible_client.py  test_orchestration_api.py  test_prompt_registry.py  test_settings.py  test_story_summary_service.py
(+656 files in other folders)
